--- a/404.html
+++ b/404.html
@@ -3,11 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/html5reset.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
 <body>
+    <header>
+    <div class="title">
+      <a class="skip-to-main" href="">Skip to main content</a>
+      <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
+      <h1>404 Not Found</h1>
+    </div>
+
+    <nav>
+      <ul>
+        <li class="currentpage"><a href="index.html">Home</a></li>
+        <li><a href="resume.html">Resumes</a></li>
+        <li><a href="networking.html">Networking & Connections</a></li>
+        <li><a href="interviews.html">Interviews</a></li>
+      </ul>
+    </nav>
+  </header>
     <p>
-        oops, something went wrong, 404 page not found 
+        Sorry, we could't find that page.
+    </p>
+    <p>
+        Click <a href="index.html"> here </a> to lead you back to the home page
     </p>
 </body>
 </html>
