--- a/resume.html
+++ b/resume.html
@@ -21,7 +21,7 @@
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="resume.html">Resumes</a></li>
+        <li class="currentpage"><a href="resume.html">Resumes</a></li>
         <li><a href="networking.html">Networking & Connections</a></li>
         <li><a href="interviews.html">Interviews</a></li>
       </ul>
@@ -207,8 +207,13 @@
   <footer class="page-footer">
     <p>University of Michigan School of Information | <a href="https://umich.instructure.com/courses/137916">UMSI Career
         Development Office </a></p>
+  <p>© Copyrights <span id="year"></span> by Ningrui Zhu. All rights reserved.</p>
   </footer>
 
+  <script>
+    document.getElementById("year").innerHTML = new Date().getFullYear();
+
+  </script>
 </body>
 
 </html>
