--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 
   <header>
     <div class="title">
+
       <a class="skip-to-main" href="">Skip to main content</a>
+
       <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
       <h1>Welcome to the UMSI Career Development Resource Hub</h1>
     </div>
@@ -129,6 +131,10 @@
   <footer class="page-footer">
     <p>University of Michigan School of Information | <a href="https://umich.instructure.com/courses/137916">UMSI Career
         Development Office </a></p>
+    <p> If you want to connect with CDO, leave your email and staff will connect you</p>
+    <label for="cdoEmail"> Email: </label>
+    <input type="cdoEmail" placeholder="you@umich.edu">
+    <button id="cdoButton">Submit</button>
     <p>© Copyrights <span id="year"></span> by Ningrui Zhu. All rights reserved.</p>
   </footer>
 
