--- a/networking.html
+++ b/networking.html
@@ -12,7 +12,7 @@
 <body>
 
     <header>
-        <div class="container">
+        <div class="title">
             <a class="skip-to-main" href="">Skip to main content</a>
             <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
             <h1>Networking & Building Connections</h1>
@@ -127,13 +127,17 @@
     <footer class="page-footer">
         <p>University of Michigan School of Information | <a href="https://umich.instructure.com/courses/137916">UMSI
                 Career Development Office </a></p>
-    <p>© Copyrights <span id="year"></span> by Ningrui Zhu. All rights reserved.</p>
-  </footer>
+        <p> If you want to connect with CDO, leave your email and staff will connect you</p>
+        <label for="cdoEmail"> Email: </label>
+        <input type="cdoEmail" placeholder="you@umich.edu">
+        <button id="cdoButton">Submit</button>
+        <p>© Copyrights <span id="year"></span> by Ningrui Zhu. All rights reserved.</p>
+    </footer>
 
-  <script>
-    document.getElementById("year").innerHTML = new Date().getFullYear();
+    <script>
+        document.getElementById("year").innerHTML = new Date().getFullYear();
 
-  </script>
+    </script>
 </body>
 
 </html>
