--- a/interviews.html
+++ b/interviews.html
@@ -12,7 +12,9 @@
 <body>
     <header>
         <div class="title">
+
             <a class="skip-to-main" href="">Skip to main content</a>
+
             <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
             <h1>Prepare for Your Interview</h1>
         </div>
@@ -63,21 +65,38 @@
             <section>
                 <h2>Interview Success: Steps to Shine</h2>
                 <ol>
-                    <li><strong>Understand the Interview Format:</strong> Find out if your interview is virtual,
+                    <li>
+                        <h3>>Understand the Interview Format:</h3> Find out if your interview is virtual,
                         in-person,
-                        or a panel, and learn what to expect.</li>
-                    <li><strong>Research the Employer:</strong> Study the organization’s mission, values, and recent
-                        projects so you can tailor your answers.</li>
-                    <li><strong>Prepare Your Responses:</strong> Review common interview questions and practice your
-                        answers, highlighting your strengths and relevant experience.</li>
-                    <li><strong>Plan Your Questions:</strong> Prepare thoughtful questions to ask the interviewer
-                        about the
-                        team, company culture, or role responsibilities.</li>
-                    <li><strong>Dress and Set Up:</strong> Choose professional attire, organize your interview
-                        space, and
-                        check your technology if interviewing remotely.</li>
-                    <li><strong>Follow Up with Gratitude:</strong> Send a prompt thank-you message expressing your
-                        appreciation and reinforcing your interest in the opportunity.</li>
+                        or a panel, and learn what to expect.
+                    </li>
+                    <li>
+                        <h3>Research the Employer:</h3>
+                        <p>Study the organization’s mission, values, and recent
+                            projects so you can tailor your answers.</p>
+                    </li>
+                    <li>
+                        <h3>Prepare Your Responses:</h3>
+                        <p>Review common interview questions and practice your
+                            answers, highlighting your strengths and relevant experience.</p>
+                    </li>
+                    <li>
+                        <h3>Plan Your Questions:</h3>
+                        <p>Prepare thoughtful questions to ask the interviewer
+                            about the
+                            team, company culture, or role responsibilities.</p>
+                    </li>
+                    <li>
+                        <h3>Dress and Set Up:</h3>
+                        <p>Choose professional attire, organize your interview
+                            space, and
+                            check your technology if interviewing remotely.</p>
+                    </li>
+                    <li>
+                        <h3>Follow Up with Gratitude:</h3>
+                        <p>Send a prompt thank-you message expressing your
+                            appreciation and reinforcing your interest in the opportunity.</p>
+                    </li>
                 </ol>
             </section>
 
