--- a/resume.html
+++ b/resume.html
@@ -13,8 +13,11 @@
 
   <header>
     <div class="title">
+
       <a class="skip-to-main" href="">Skip to main content</a>
+
       <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
+
       <h1>Resume Support</h1>
     </div>
 
@@ -56,46 +59,60 @@
       <section>
         <h2>Resume Writing Made Easy: Steps to Success</h2>
         <ol>
-          <li><strong>Download a UMSI-Approved Template:</strong> Start with a format that works—no need to design from
-            scratch.</li>
-          <li><strong>Gather Your Experiences:</strong> List jobs, internships, volunteer roles, coursework, and
-            projects
-            most relevant to your goals.</li>
-          <li><strong>Write Impactful Bullets:</strong> Use action verbs and highlight your skills, results, and unique
-            contributions.</li>
-          <li><strong>Tailor for Each Opportunity:</strong> Customize your resume for every job or internship you
-            pursue.
+          <li>
+            <h3>Download a UMSI-Approved Template:</h3>
+            <p>Start with a format that works—no need to design from
+              scratch.</p>
           </li>
-          <li><strong>Review and Edit:</strong> Proofread for errors, check formatting, and ask for feedback from peers
-            or
-            a career coach.</li>
+          <li>
+            <h3>Gather Your Experiences:</h3>
+            <p>List jobs, internships, volunteer roles, coursework, and
+              projects
+              most relevant to your goals.</p>
+          </li>
+          <li>
+            <h3>Write Impactful Bullets:</h3>
+            <p>Use action verbs and highlight your skills, results, and unique
+              contributions.</p>
+          </li>
+          <li>
+            <h3>Tailor for Each Opportunity:</h3>
+            <p>Customize your resume for every job or internship you
+              pursue.</p>
+          </li>
+          <li>
+            <h3>Review and Edit:</h3>
+            <p>Proofread for errors, check formatting, and ask for feedback from peers
+              or
+              a career coach. </p>
+          </li>
         </ol>
       </section>
 
-      <section class = "resource-section">
+      <section class="resource-section">
         <h2>Resume Resources</h2>
         <img src="images/Resume1.jpg"
           alt="Thousands of books cover the full width of a city street, from curb to curb.">
-        <ul class = "resource-grid">
-          <li class = "resource-card">
+        <ul class="resource-grid">
+          <li class="resource-card">
             <a href="https://umsi.instructure.com/courses/12345/pages/resume-guide" target="_blank">
               UMSI Resume Guide and Rubric
             </a>
             <p>Comprehensive UMSI guide including tips, formatting rules, and sample accomplishments.</p>
           </li>
-          <li class = "resource-card">
+          <li class="resource-card">
             <a href="https://umsi.instructure.com/courses/12345/pages/writing-resume-bullets" target="_blank">
               Writing Effective Resume Bullets
             </a>
             <p>Learn how to describe your work and impact in ways employers notice.</p>
           </li>
-          <li class = "resource-card">
+          <li class="resource-card">
             <a href="https://umsi.instructure.com/courses/12345/pages/resume-rubric" target="_blank">
               Resume Rubric
             </a>
             <p>Evaluate your resume using the same criteria as UMSI’s Career Development Office.</p>
           </li>
-          <li class = "resource-card">
+          <li class="resource-card">
             <a href="https://umsi.instructure.com/courses/12345/pages/app-materials-resources" target="_blank">
               Application Materials: Workshops and More
             </a>
@@ -211,7 +228,7 @@
     <label for="cdoEmail"> Email: </label>
     <input type="cdoEmail" placeholder="you@umich.edu">
     <button id="cdoButton">Submit</button>
-  <p>© Copyrights <span id="year"></span> by Ningrui Zhu. All rights reserved.</p>
+    <p>© Copyrights <span id="year"></span> by Ningrui Zhu. All rights reserved.</p>
   </footer>
 
   <script>
