--- a/networking.html
+++ b/networking.html
@@ -65,34 +65,34 @@
             <section>
                 <h2>Building a Strategic Networking Plan</h2>
                 <img src="images/CareerFair.jpg" alt="CareerFair">
-                <ul>
+                <ul class = "box">
                     <li>
                         <a href="https://docs.google.com/document/d/18HMt79BU8ovGf9z7_P7No5tuwUS6qHNW5u0sgrepLtE/edit?tab=t.0"
                             target="_blank">
-                            Networking Handout
+                            <h3>Networking Handout </h3>
                         </a> <br>
-                        Comprehensive handout for you to create your networking list
+                        <p>Comprehensive handout for you to create your networking list</p>
                     </li>
                     <li>
                         <a href="https://docs.google.com/document/d/1C-rxX5VcjVH7YjMdHil1VMo9ZdSOHmausOcX61dld-g/edit?tab=t.0#heading=h.f7yduyb84h87"
                             target="_blank">
-                            AI prompt
+                            <h3>AI prompt</h3>
                         </a> <br>
-                        AI prompt Resource guide for networking.
+                        <p>AI prompt Resource guide for networking.</p>
                     </li>
                     <li>
                         <a href="https://docs.google.com/document/d/1633aBaWXIZW_ImTP-jKKN0QNXK9-RpXXmVznRgA4ZHQ/edit?tab=t.0"
                             target="_blank">
-                            Elevator Pitch
+                            <h3>Elevator Pitch</h3>
                         </a> <br>
-                        Elevator Pitch Rubic for you to build a strong Pitch.
+                        <p>Elevator Pitch Rubic for you to build a strong Pitch.</p>
                     </li>
                     <li>
                         <a href="https://docs.google.com/spreadsheets/d/1JtqyC7YSip571jGJjw8JTzCfQSQQX-VmIV4KS_PZ1EE/edit?gid=1589706144#gid=1589706144"
                             target="_blank">
-                            Conference help
+                            <h3>Conference help</h3>
                         </a> <br>
-                        Conference Preparation Template
+                        <p>Conference Preparation Template</p>
                     </li>
                 </ul>
             </section>
