--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         Development Office </a></p>
     <p> If you want to connect with CDO, leave your email and staff will connect you</p>
     <label> Email: <input type="email" id="cdoEmail" placeholder="you@umich.edu"></label>
-    <button id="cdoButton">Submit</button>
+    <button id="cdoButton" type = "button">Submit</button>
     <p>© Copyrights <span id="year"></span> by Ningrui Zhu. All rights reserved.</p>
   </footer>
 
