--- a/networking.html
+++ b/networking.html
@@ -130,7 +130,7 @@
         <p> If you want to connect with CDO, leave your email and staff will connect you</p>
         <label for="cdoEmail"> Email: </label>
         <input type="cdoEmail" placeholder="you@umich.edu">
-        <button id="cdoButton">Submit</button>
+        <button id="cdoButton" type = "button">Submit</button>
         <p>© Copyrights <span id="year"></span> by Ningrui Zhu. All rights reserved.</p>
     </footer>
 
