--- a/index.html
+++ b/index.html
@@ -57,21 +57,36 @@
         <section>
           <h2>Why Use This Resource?</h2>
           <ol>
-            <li><h3>Everything in One Place:</h3> <p>Stop searching endlessly—quickly access the resources you need
-              for
-              resumes, interviews, networking, mentorship, and more.</p></li>
-            <li><h3>Student-Focused Navigation:</h3><p>Browse by topic or question. Key areas are highlighted so
-              you
-              can get moving right away.</p></li>
-            <li><h3>Guidance Backed by Experts:</h3> <p>All resources are recommended and reviewed by the UMSI
-              Career
-              Development Office, so you can trust the advice and materials you find here.</p></li>
-            <li><h3>Always Accessible:</h3> <p>Visit the site anytime, from any device. We’re committed to meeting
-              the
-              accessibility needs of all students.</p></li>
-            <li><h3>Modern Support, UMSI Excellence:</h3> <p>We benchmark against top peer institutions and
-              integrate
-              UMSI’s unique support, showcasing our commitment to your success.</p></li>
+            <li>
+              <h3>Everything in One Place:</h3>
+              <p>Stop searching endlessly—quickly access the resources you need
+                for
+                resumes, interviews, networking, mentorship, and more.</p>
+            </li>
+            <li>
+              <h3>Student-Focused Navigation:</h3>
+              <p>Browse by topic or question. Key areas are highlighted so
+                you
+                can get moving right away.</p>
+            </li>
+            <li>
+              <h3>Guidance Backed by Experts:</h3>
+              <p>All resources are recommended and reviewed by the UMSI
+                Career
+                Development Office, so you can trust the advice and materials you find here.</p>
+            </li>
+            <li>
+              <h3>Always Accessible:</h3>
+              <p>Visit the site anytime, from any device. We’re committed to meeting
+                the
+                accessibility needs of all students.</p>
+            </li>
+            <li>
+              <h3>Modern Support, UMSI Excellence:</h3>
+              <p>We benchmark against top peer institutions and
+                integrate
+                UMSI’s unique support, showcasing our commitment to your success.</p>
+            </li>
           </ol>
         </section>
       </article>
@@ -135,7 +150,8 @@
         Development Office </a></p>
     <p> If you want to connect with CDO, leave your email and staff will connect you</p>
     <label> Email: <input type="email" id="cdoEmail" placeholder="you@umich.edu"></label>
-    <button id="cdoButton" type = "button">Submit</button>
+    <label for="cdoButton"></label>
+    <button id="cdoButton" type="button">Submit</button>
     <p>© Copyrights <span id="year"></span> by Ningrui Zhu. All rights reserved.</p>
   </footer>
 
