--- a/networking.html
+++ b/networking.html
@@ -65,7 +65,7 @@
             <section>
                 <h2>Building a Strategic Networking Plan</h2>
                 <img src="images/CareerFair.jpg" alt="CareerFair">
-                <ul class = "box">
+                <ul class="box">
                     <li>
                         <a href="https://docs.google.com/document/d/18HMt79BU8ovGf9z7_P7No5tuwUS6qHNW5u0sgrepLtE/edit?tab=t.0"
                             target="_blank">
@@ -128,9 +128,9 @@
         <p>University of Michigan School of Information | <a href="https://umich.instructure.com/courses/137916">UMSI
                 Career Development Office </a></p>
         <p> If you want to connect with CDO, leave your email and staff will connect you</p>
-        <label for="cdoEmail"> Email: </label>
-        <input type="cdoEmail" placeholder="you@umich.edu">
-        <button id="cdoButton" type = "button">Submit</button>
+        <label> Email: <input type="email" id="cdoEmail" placeholder="you@umich.edu"></label>
+        <label for="cdoButton"></label>
+        <button id="cdoButton" type="button">Submit</button>
         <p>© Copyrights <span id="year"></span> by Ningrui Zhu. All rights reserved.</p>
     </footer>
 
