--- a/interviews.html
+++ b/interviews.html
@@ -211,15 +211,14 @@
                 Career
                 Development Office </a></p>
         <p> If you want to connect with CDO, leave your email and staff will connect you</p>
-        <label for="cdoEmail"> Email: </label>
-        <input type="cdoEmail" placeholder="you@umich.edu">
+        <label> Email: <input type="email" id="cdoEmail" placeholder="you@umich.edu"></label>
+        <label for = "cdoButton"></label>
         <button id="cdoButton" type = "button">Submit</button>
         <p>© Copyrights <span id="year"></span> by Ningrui Zhu. All rights reserved.</p>
     </footer>
 
     <script>
         document.getElementById("year").innerHTML = new Date().getFullYear();
-
     </script>
 </body>
 
