--- a/resume.html
+++ b/resume.html
@@ -225,9 +225,9 @@
     <p>University of Michigan School of Information | <a href="https://umich.instructure.com/courses/137916">UMSI Career
         Development Office </a></p>
     <p> If you want to connect with CDO, leave your email and staff will connect you</p>
-    <label for="cdoEmail"> Email: </label>
-    <input type="cdoEmail" placeholder="you@umich.edu">
-    <button id="cdoButton" type = "button">Submit</button>
+    <label> Email: <input type="email" id="cdoEmail" placeholder="you@umich.edu"></label>
+    <label for="cdoButton"></label>
+    <button id="cdoButton" type="button">Submit</button>
     <p>© Copyrights <span id="year"></span> by Ningrui Zhu. All rights reserved.</p>
   </footer>
 
